fix button alignment issue post css change

--- a/packages/nouns-webapp/src/components/Proposals/Proposals.module.css
+++ b/packages/nouns-webapp/src/components/Proposals/Proposals.module.css
@@ -158,8 +158,16 @@
     align-items: flex-start;
   }
 
+  .forceFlexRow {
+    flex-direction: row;
+  }
+
   .heading {
     width: 100%;
+  }
+
+  .nullStateSubmitProposalBtnWrapper {
+    text-align: right;
   }
 }
 
@@ -182,6 +190,10 @@
 }
 
 .submitProposalButtonWrapper {
+  text-align: right;
+}
+
+.nullStateSubmitProposalBtnWrapper {
   text-align: right;
 }
 
